# multilingual-rag-bangla

./: .env.example  .gitignore  README.md  create_vectorDB.py  index.html  main.py  project_10.ipynb  pyproject.toml  script.js  styles.css
